# media-savant

./: docker-compose.yml  metadata.json  metadata.py
desktop/: .gitignore
docs/: jellyfin-client-spec.md  rust-service-structure.md  tanstack-structure.md
mobile/: .gitignore
server/: .env.example  .gitignore  Cargo.toml  Dockerfile
server/src/: main.rs  state.rs
server/src/config/: mod.rs
server/src/models/: mod.rs
server/src/routes/: auth.rs  health.rs  mod.rs  proxy.rs  setup.rs  stream.rs
web-ui/: .gitignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  server.js  tailwind.config.ts  tsconfig.json  vite.config.ts
web-ui/src/: App.tsx  main.tsx  routeTree.gen.ts  router.tsx  styles.css
web-ui/src/components/layout/: Header.tsx
web-ui/src/components/media/: CastMember.tsx  EpisodeCard.tsx  HeroSection.tsx  MediaCard.tsx  MediaCarousel.tsx  MediaThumbnail.tsx  index.ts
web-ui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  index.ts
web-ui/src/lib/: api.ts  auth.ts  jellyfin.ts
web-ui/src/routes/: __root.tsx  index.tsx  item.$itemId.tsx  library.$libraryId.tsx  library.tsx  search.tsx  setup.tsx
web-ui/src/stores/: session.ts
