[package]
name = "media-savant-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-governor = "0.8.0"
actix-web = "4.11.0"
anyhow = "1.0.97"
bytes = "1.8.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures-util = "0.3.30"
log = "0.4.22"
redis = { version = "0.25.3", features = ["tokio-comp"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
